Make TextIterator::RangeLength() to return valid value when ending in ::first-letter

This patch changes |TextIteratorTextNodeHandler::HandleTextBox()| to handle
range ends at end of leading collapsed whitespace of first-letter part, e.g.
"<p>^ |(1) foo</p>" where P has ::first-letter.

Bug: 810623
Change-Id: I6888bf0cba305d33c193b6cd4c3f191c8dcf36bd
Reviewed-on: https://chromium-review.googlesource.com/910543
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536916}
Former-commit-id: 7df9529c3bd71b5cdef2b89c8ccbfe5cb685a9c6